# ChangeLog for sys-devel/gdb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.151 2009/02/22 19:45:43 vapier Exp $

  22 Feb 2009; Mike Frysinger <vapier@gentoo.org> gdb-6.8-r1.ebuild:
  Use system readline only if it is version 5 #259865 by michel.

  01 Feb 2009; nixnut <nixnut@gentoo.org> gdb-6.8-r1.ebuild:
  ppc stable #255219

  23 Jan 2009; Brent Baude <ranger@gentoo.org> gdb-6.8-r1.ebuild:
  stable ppc64, bug 255219

  23 Jan 2009; Raúl Porcel <armin76@gentoo.org> gdb-6.8-r1.ebuild:
  ia64/sparc stable wrt #255219

  18 Jan 2009; Markus Meier <maekke@gentoo.org> gdb-6.8-r1.ebuild:
  amd64/x86 stable, bug #255219

  18 Jan 2009; Tobias Klausmann <klausman@gentoo.org> gdb-6.8-r1.ebuild:
  Stable on alpha, bug #255219

  18 Jan 2009; Guy Martin <gmsoft@gentoo.org> gdb-6.8-r1.ebuild:
  hppa stable, #255219

  02 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org> metadata.xml:
  Update metadata.xml to include USE flag descriptions. Entries taken from
  profiles/use.local.desc. GLEP 56

*gdb-6.8-r1 (21 Jun 2008)

  21 Jun 2008; Mike Frysinger <vapier@gentoo.org> +gdb-6.8-r1.ebuild:
  Add some PIE patches #223533 by Magnus Granberg.

  07 Apr 2008; Mike Frysinger <vapier@gentoo.org> gdb-6.8.ebuild:
  Workaround build failure with USE=multitarget #216368.

  30 Mar 2008; Mike Frysinger <vapier@gentoo.org> gdb-6.7.1-r3.ebuild,
  gdb-6.8.ebuild:
  Use strip-unsupported-flags rather than replace-flags as pointed out by Donnie.

  30 Mar 2008; Markus Rothe <corsair@gentoo.org> gdb-6.7.1-r3.ebuild:
  Stable on ppc64; bug #215339

  30 Mar 2008; Raúl Porcel <armin76@gentoo.org> gdb-6.7.1-r3.ebuild:
  alpha/ia64/sparc stable wrt #215339

  29 Mar 2008; Dawid Węgliński <cla@gentoo.org> gdb-6.7.1-r3.ebuild:
  Stable on x86 (bug #215339)

  29 Mar 2008; Jeroen Roovers <jer@gentoo.org> gdb-6.7.1-r3.ebuild:
  Stable for HPPA (bug #215339).

*gdb-6.8 (29 Mar 2008)
