@@ -6,9 +6,13 @@ DIST gdb-6.6.tar.bz2 14535755 RMD160 6430798ba47a1913676622db9a73bf2bcfa703be SH
 DIST gdb-6.7.1-patches-1.3.tar.bz2 109192 RMD160 412c8ef3a4dd2073bd56b01d762af8c5bcd1ba6c SHA1 c648fe09b120ab45e367e904758cdd95abeb675e SHA256 8d614d6ecdb343310904e293bc86f154550829cb45c5b5bd3bff9c26543f9132
 DIST gdb-6.7.1.tar.bz2 15080950 RMD160 c5ae709aefe75094c8d08341bfb882b490ddb2a2 SHA1 4ecfb5896d511111d9a5d91e937501caa9d33ced SHA256 f98cec38420f4f1ce3da2f16e6045f086d24dfcf05996b2d74f8620691442f62
 DIST gdb-6.8-patches-1.4.tar.lzma 122922 RMD160 fbe74b5dc6400389a4a7d70597b0028cbe480c93 SHA1 1c37bb223ff4b7eb7cbba249af1a216a3bf289e6 SHA256 83121b238df52e4556ea197112f6103b34965b8e1773ab1af2949baf53f8dde4
+DIST gdb-6.8-patches-1.5.tar.lzma 125348 RMD160 f0f2668b709aa4f06a77b8c9a9d147273a08d73c SHA1 ff0bb2d76ca8681554eca94272ff0cde4b7d75dd SHA256 e503204a517992595b37f49e6cb115bcb1c210845197d54d974ffd53bc55647b
+DIST gdb-6.8.50.20090302-8.fc11.src.rpm 17899846 RMD160 a111815281da807ac7fc823eb17188fffbc7e9c5 SHA1 38678568f4b5f1e433ee8a145ad3c4430260f185 SHA256 20cf30096ece5f8ff90c5ec4ad0ca72cb5c5f8da6ba7d3dc40e923bad68083ef
 DIST gdb-6.8.tar.bz2 15581509 RMD160 23fc9442290b6383ce8f943ef1eb117fa06e79fb SHA1 ba1394d59dd84a1dd3a83322bd82c799596f0bcf SHA256 eedffd586bf41cf2ae2f77e6819545d6eb1e5062052320a27332fdfaaebdf818
 EBUILD gdb-6.6-r2.ebuild 1986 RMD160 64b379918a63a08a38f257d9f008ba3f13607dcb SHA1 7e25d4d705b4334af96877e2a1b83f36bd088076 SHA256 e06a817c862be2e2fd283e7783dd89a5c570585cedcbbf854b2ab9b1f8b09f57
 EBUILD gdb-6.7.1-r3.ebuild 2118 RMD160 ced207c9058d4683a91130383e945cca40dc48aa SHA1 cf3e7b4abfa54a90bc7e092af98a30bc8aea8eb1 SHA256 f4b346341ac4745f92f55aab67fe9b9b94583ecfb4b4476ed82cdcfcfee3c1d5
 EBUILD gdb-6.8-r1.ebuild 2621 RMD160 e7ac8dc2d4a53503661dd045160fee6003bac9f6 SHA1 d891f3d08b5b3ed13251b5705d0ea64622bd2bb5 SHA256 3d26ccf2670e911112e97bed9daa9f899accede221954f32004aa82d8904f4b0
-MISC ChangeLog 20519 RMD160 c88097e03ce340025de7be3b35b05af435dec84c SHA1 8c7e6f12cc263269f1bcf5e2f5378aaeb9edb6d5 SHA256 09b7322704f48b52e9318398378334e70d0dffc4c038f7e8f5a64f2a6bb6dcae
+EBUILD gdb-6.8-r2.ebuild 2621 RMD160 e3a0c6f369556bc41503275e84d1155b51b368ae SHA1 2d50be16a9b56f85621d934df40e70b85354ce1d SHA256 7e34261946bf8884eaee2a8040eed74afeb0593b7ae99512f7d0d463b280e2bd
+EBUILD gdb-6.8.50.20090302.8.11.ebuild 3213 RMD160 38fd2f83193d29edfcef93a897fb09316b69873b SHA1 f81e85acf330150162bb4b120dd5f02914163abc SHA256 1ecf0602b29db1cc8a0780d882ac7661cdc0051c1801cb22b4abd65398dcbe24
+MISC ChangeLog 20881 RMD160 bcf9e12d2d11400d43a6313780c41b016e00bdde SHA1 cd89437c6a749b0e1745e660afe9eff5db3aed10 SHA256 917c8c5420292c448ceec863443e2bed062f742916b3b9da9c2d1a57ca57143f
 MISC metadata.xml 251 RMD160 cb176faa89c777027383a74e60c27715c40bf23e SHA1 03fd413e01587f416f4c34afe2cf23946584100a SHA256 49bbfdebf288c2c31f6f6733c58c4092104a208f9e34533b824ec20b15915be2
